[package]
name = "monoio-netreq"
version = "0.1.0"
edition = "2021"
authors = ["Priyanshu Singh <anshu.singh1429@gmail.com>"]
description = "monoio-netreq is a user-friendly HTTP client library designed for use with the Monoio runtime"
license = "Apache-2.0"
repository = "https://github.com/ReflxzR/monoio-netreq"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
monoio = { version = "0.2.4", default-features = false }
monoio-http = { version = "0.3.11", optional = true }
monoio-transports-netreq-fork = { version = "0.1.0", default-features = false }
hyper = { version = "1.5.0", optional = true }
http-body-util = { version = "0.1.2", optional = true }
http = "1.1.0"
thiserror = "2.0.3"
serde = "1.0.215"
serde_json = "1.0.132"
bytes = "1.8.0"
smol_str = "0.3.2"
service-async = "0.2.4"

[dev-dependencies]
anyhow = "1.0.92"

[features]
default = ["default-crate"]

# use default-crate feature if you want to use the default monoio-transports package
default-crate = ["monoio-transports-netreq-fork/default", "monoio-http"]
native-tls = ["default-crate", "monoio-transports-netreq-fork/crate-native-tls"]
hyper = [
    "default-crate",
    "monoio-transports-netreq-fork/crate-hyper",
    "dep:hyper",
    "dep:http-body-util"
]

# use the pool features if you want to use the git patch source
pool = ["monoio-transports-netreq-fork/pool", "monoio-http"]
pool-native-tls = ["pool", "monoio-transports-netreq-fork/native-tls"]
pool-hyper = [
    "pool",
    "monoio-transports-netreq-fork/hyper",
    "dep:hyper",
    "dep:http-body-util"
]

# use the hyper-tls feature if you specifically want to use hyper connectors with tls support
hyper-tls = [
    "monoio-transports-netreq-fork/hyper-tls",
    "dep:hyper",
    "dep:http-body-util"
]
hyper-native-tls = [
    "hyper-tls",
    "monoio-transports-netreq-fork/hyper-native-tls"
]


[[example]]
name = "http_with_auto_protocol"
required-features = ["default-crate"]

[[example]]
name = "https_with_http1"
required-features = ["pool"]

[[example]]
name = "https_with_http2"
required-features = ["default-crate"]

[[example]]
name = "https_with_hyper_h1"
required-features = ["hyper-tls"]

[[example]]
name = "http_with_hyper_auto_protocol"
required-features = ["hyper"] # can replace it with pool-hyper also